--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -283,8 +283,23 @@ jobs:
         # Wait a moment for the PR to be fully created
         sleep 5
         
-        # Enable auto-merge for the PR
-        curl -X PUT \
+        # Check if PR can be merged (no merge conflicts, all checks passed)
+        echo "Checking PR mergeability..."
+        MERGEABLE=$(curl -s -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER" | \
+          jq -r '.mergeable')
+        
+        if [ "$MERGEABLE" != "true" ]; then
+          echo "❌ PR #$PR_NUMBER cannot be merged (mergeable: $MERGEABLE)"
+          echo "This is likely due to repository rules requiring reviews or status checks"
+          echo "The PR has been created but requires manual review/approval"
+          exit 0
+        fi
+        
+        # Attempt to merge the PR
+        echo "Attempting to merge PR #$PR_NUMBER..."
+        MERGE_RESPONSE=$(curl -s -w "\n%{http_code}" -X PUT \
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
           "https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/merge" \
@@ -292,9 +307,31 @@ jobs:
             "commit_title": "chore(release): bump version to ${{ steps.calculate_version.outputs.new_snapshot }}",
             "commit_message": "Automatically merged by release workflow",
             "merge_method": "rebase"
-          }'
+          }')
         
-        echo "✅ PR #$PR_NUMBER auto-merged successfully"
+        # Extract HTTP status code and response body
+        HTTP_CODE=$(echo "$MERGE_RESPONSE" | tail -n1)
+        RESPONSE_BODY=$(echo "$MERGE_RESPONSE" | head -n -1)
+        
+        if [ "$HTTP_CODE" = "200" ]; then
+          echo "✅ PR #$PR_NUMBER auto-merged successfully"
+          
+          # Delete the bump branch after successful merge
+          echo "Deleting bump branch after successful merge..."
+          BRANCH_NAME="release/bump-version-${{ steps.calculate_version.outputs.new_snapshot }}"
+          curl -X DELETE \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/git/refs/heads/$BRANCH_NAME"
+          
+          echo "✅ Bump branch '$BRANCH_NAME' deleted successfully"
+        else
+          echo "❌ PR #$PR_NUMBER auto-merge failed (HTTP $HTTP_CODE)"
+          echo "Response: $RESPONSE_BODY"
+          echo "This is likely due to repository rules requiring reviews or status checks"
+          echo "The PR has been created but requires manual review/approval"
+          echo "Bump branch will be deleted when PR is manually merged"
+        fi
     
     - name: Create GitHub Release
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
